--- a/css/site-style.css
+++ b/css/site-style.css
@@ -55,6 +55,7 @@ hr.small {
   font-size: 12px;
 }
 .navbar-custom .nav li a {
+  color: white;
   text-transform: uppercase;
   font-size: 12px;
   font-weight: 800;
@@ -81,7 +82,7 @@ hr.small {
   }
   .navbar-custom .nav li a:hover,
   .navbar-custom .nav li a:focus {
-    color: rgba(255, 255, 255, 0.8);
+    color: blue;
   }
 }
 @media only screen and (min-width: 1170px) {
