--- a/css/site-style.css
+++ b/css/site-style.css
@@ -82,7 +82,7 @@ hr.small {
   }
   .navbar-custom .nav li a:hover,
   .navbar-custom .nav li a:focus {
-    color: blue;
+    color: #777777;
   }
 }
 @media only screen and (min-width: 1170px) {
